--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <style>
 
-/* RESET */
+/* BASE */
 
 body{
 margin:0;
@@ -14,7 +14,7 @@ font-family:Arial;
 background:#f0f2f5;
 }
 
-/* HEADER LOGIN */
+/* LOGIN HEADER */
 
 .header-login{
 text-align:center;
@@ -38,63 +38,46 @@ height:60vh;
 }
 
 .login-box{
-
 width:220px;
 height:220px;
-
 border:2px solid #ccc;
 border-radius:12px;
-
 display:flex;
 justify-content:center;
 align-items:center;
-
 font-size:22px;
 font-weight:bold;
-
 cursor:pointer;
-
 background:transparent;
-
 transition:0.3s;
-
 }
 
 .login-box:hover{
-
 background:#f5f5f5;
 border-color:#1e88e5;
 color:#1e88e5;
 transform:scale(1.05);
-
 }
 
-/* LAYOUT EVO */
+/* EVO LAYOUT */
 
 .layout{
 display:flex;
 height:100vh;
 }
 
-/* SIDEBAR */
-
 .sidebar{
-
 width:260px;
 background:#1f2937;
 color:white;
-
 display:flex;
 flex-direction:column;
-
 }
 
 .sidebar-header{
-
 padding:20px;
 text-align:center;
 border-bottom:1px solid rgba(255,255,255,0.2);
-
 }
 
 .sidebar-header img{
@@ -102,7 +85,6 @@ max-width:80px;
 }
 
 .sidebar button{
-
 background:none;
 border:none;
 color:white;
@@ -110,14 +92,11 @@ padding:15px;
 text-align:left;
 cursor:pointer;
 font-size:16px;
-
 }
 
 .sidebar button:hover{
 background:#374151;
 }
-
-/* CONTENT */
 
 .content{
 flex:1;
@@ -128,14 +107,11 @@ overflow:auto;
 /* CARD */
 
 .card{
-
 background:white;
 padding:15px;
 margin-bottom:10px;
 border-radius:8px;
-
 box-shadow:0 2px 5px rgba(0,0,0,0.2);
-
 }
 
 /* STATUS */
@@ -155,58 +131,60 @@ color:white;
 /* MODAL */
 
 .modal{
-
 position:fixed;
-
 top:50%;
 left:50%;
-
 transform:translate(-50%,-50%);
-
 background:white;
-
 padding:20px;
-
 border-radius:10px;
-
 box-shadow:0 0 20px rgba(0,0,0,0.3);
-
 z-index:1000;
-
 }
 
 .calendario{
-
 display:grid;
 grid-template-columns:repeat(7,1fr);
 gap:5px;
-
 }
 
 .dia{
-
 padding:10px;
 text-align:center;
 cursor:pointer;
 background:#eee;
 border-radius:5px;
-
 }
 
 .dia:hover{
 background:#ddd;
 }
 
+.horario{
+padding:10px;
+margin:5px;
+background:#1e88e5;
+color:white;
+border-radius:5px;
+cursor:pointer;
+}
+
+.horario:hover{
+background:#1565c0;
+}
+
+.horario.bloqueado{background:red;}
+.horario.treinamento{background:purple;}
+
 .hidden{
 display:none;
 }
 
 </style>
-
 </head>
 <body>
 
-<!-- LOGIN SCREEN -->
+<!-- LOGIN -->
 
 <div id="loginScreen">
 
@@ -222,23 +200,17 @@ display:none;
 
 <div class="login-container">
 
-<div class="login-box" onclick="loginAdmin()">
-ADMIN
-</div>
+<div class="login-box" onclick="loginAdmin()">ADMIN</div>
 
-<div class="login-box" onclick="loginRecepcao()">
-RECEPÇÃO
-</div>
+<div class="login-box" onclick="loginRecepcao()">RECEPÇÃO</div>
 
-<div class="login-box" onclick="loginProfessor()">
-PROFESSOR
-</div>
+<div class="login-box" onclick="loginProfessor()">PROFESSOR</div>
 
 </div>
 
 </div>
 
-<!-- EVO LAYOUT -->
+<!-- EVO -->
 
 <div id="app" class="layout hidden">
 
@@ -256,13 +228,11 @@ PROFESSOR
 
 </div>
 
-<button onclick="abrirAgenda()">Agenda</button>
+<button onclick="modoAgendar()">Novo Agendamento</button>
 
-<button id="btnAgendar" onclick="abrirCalendario()">Novo Agendamento</button>
+<button onclick="modoBloquearDia()">Bloquear Dia</button>
 
-<button id="btnBloquearDia" onclick="bloquearDia()">Bloquear Dia</button>
-
-<button id="btnBloquearHorario" onclick="bloquearHorario()">Bloquear Horário</button>
+<button onclick="modoBloquearHorario()">Bloquear Horário</button>
 
 <button onclick="logout()">Sair</button>
 
@@ -290,9 +260,19 @@ PROFESSOR
 
 </div>
 
-<script>
+<!-- HORARIOS -->
 
-/* CONFIG */
+<div id="modalHorarios" class="modal hidden">
+
+<h3 id="dataSelecionada"></h3>
+
+<div id="listaHorarios"></div>
+
+<button onclick="fecharHorarios()">Fechar</button>
+
+</div>
+
+<script>
 
 const horarios=[
 
@@ -308,8 +288,8 @@ let agendamentos=
 JSON.parse(localStorage.getItem("agendamentos")||"[]");
 
 let usuarioTipo="";
-let usuarioNome="";
-
+let modo="";
+let dataAtual="";
 let mes=new Date().getMonth();
 let ano=new Date().getFullYear();
 
@@ -322,8 +302,8 @@ let senha=prompt("Senha Admin:");
 if(senha==="696907"){
 
 usuarioTipo="admin";
-usuarioNome="ADMIN";
-entrar();
+
+entrar("ADMIN");
 
 }
 
@@ -334,34 +314,30 @@ function loginRecepcao(){
 let nome=prompt("Nome:");
 
 usuarioTipo="recepcao";
-usuarioNome=nome;
-entrar();
+
+entrar(nome);
 
 }
 
 function loginProfessor(){
 
 usuarioTipo="professor";
-usuarioNome="PROFESSOR";
-entrar();
+
+entrar("PROFESSOR");
 
 }
 
-function entrar(){
+function entrar(nome){
 
 document.getElementById("loginScreen").classList.add("hidden");
 
 document.getElementById("app").classList.remove("hidden");
 
-document.getElementById("userLabel").innerText=usuarioNome;
-
-/* PERMISSOES */
+document.getElementById("userLabel").innerText=nome;
 
 if(usuarioTipo==="professor"){
 
-document.getElementById("btnAgendar").style.display="none";
-document.getElementById("btnBloquearDia").style.display="none";
-document.getElementById("btnBloquearHorario").style.display="none";
+document.querySelector(".sidebar button").style.display="none";
 
 }
 
@@ -369,96 +345,29 @@ renderAgenda();
 
 }
 
-function logout(){
-location.reload();
-}
+/* MODOS */
 
-/* SALVAR */
+function modoAgendar(){
 
-function salvar(){
+modo="agendar";
 
-localStorage.setItem("agendamentos",JSON.stringify(agendamentos));
+abrirCalendario();
 
 }
 
-/* AGENDA */
+function modoBloquearDia(){
 
-function abrirAgenda(){
-renderAgenda();
-}
+modo="bloquearDia";
 
-function renderAgenda(){
-
-let div=document.getElementById("agenda");
-
-div.innerHTML="";
-
-agendamentos.sort((a,b)=>
-new Date(a.data+" "+a.hora)-
-new Date(b.data+" "+b.hora)
-);
-
-agendamentos.forEach(a=>{
-
-let card=document.createElement("div");
-
-card.className="card";
-
-card.innerHTML=`
-
-<b>${a.data} ${a.hora}</b><br>
-
-${a.nome || ""} (ID ${a.id || ""})<br>
-
-<span class="status ${a.status}">
-${a.status}
-</span><br>
-
-${usuarioTipo!=="professor"
-?`<button onclick="cancelar(${a.uid})">Cancelar</button>`:""}
-
-<button onclick="status(${a.uid},'realizado')">Realizado</button>
-
-<button onclick="status(${a.uid},'faltou')">Faltou</button>
-
-`;
-
-div.appendChild(card);
-
-});
+abrirCalendario();
 
 }
 
-/* CANCELAR */
+function modoBloquearHorario(){
 
-function cancelar(uid){
+modo="bloquearHorario";
 
-if(!confirm("Cancelar agendamento?")) return;
-
-agendamentos=
-agendamentos.filter(a=>a.uid!==uid);
-
-salvar();
-
-renderAgenda();
-
-}
-
-/* STATUS */
-
-function status(uid,s){
-
-let a=agendamentos.find(x=>x.uid===uid);
-
-if(a){
-
-a.status=s;
-
-salvar();
-
-renderAgenda();
-
-}
+abrirCalendario();
 
 }
 
@@ -478,19 +387,16 @@ let cal=document.getElementById("calendario");
 
 cal.innerHTML="";
 
-document.getElementById("mesAno").innerText=
-(mes+1)+"/"+ano;
+document.getElementById("mesAno").innerText=(mes+1)+"/"+ano;
 
 let dias=new Date(ano,mes+1,0).getDate();
 
 for(let i=1;i<=dias;i++){
 
 let data=
-ano+"-"+String(mes+1).padStart(2,"0")
-+"-"+String(i).padStart(2,"0");
+ano+"-"+String(mes+1).padStart(2,"0")+"-"+String(i).padStart(2,"0");
 
-let ocupados=
-agendamentos.filter(a=>a.data===data);
+let ocupados=agendamentos.filter(a=>a.data===data);
 
 let d=document.createElement("div");
 
@@ -515,84 +421,15 @@ cal.appendChild(d);
 
 function selecionarDia(data){
 
-let livres=
-horarios.filter(h=>
-!agendamentos.find(a=>a.data===data && a.hora===h)
-);
+if(modo==="bloquearDia"){
 
-let hora=prompt("Horários disponíveis:\n"+livres.join("\n"));
-
-if(!hora)return;
-
-let nome=prompt("Nome:");
-
-let id=prompt("ID:");
-
-let existente=agendamentos.find(a=>a.id===id);
-
-if(existente && existente.nome!==nome){
-
-alert("ID já pertence a "+existente.nome);
-
-return;
-
-}
-
-/* 3 MESES */
-
-let ultima=
-agendamentos
-.filter(a=>a.id===id && a.status==="realizado")
-.sort((a,b)=>new Date(b.data)-new Date(a.data))[0];
-
-if(ultima){
-
-let d=new Date(ultima.data);
-
-d.setMonth(d.getMonth()+3);
-
-if(new Date()<d){
-
-if(!confirm("Avaliação antes de 3 meses. Continuar?"))
-return;
-
-}
-
-}
-
-agendamentos.push({
-
-uid:Date.now(),
-
-data,
-
-hora,
-
-nome,
-
-id,
-
-status:"pendente"
-
-});
-
-salvar();
-
-renderAgenda();
-
-}
-
-/* BLOQUEIOS */
-
-function bloquearDia(){
-
-let data=prompt("Data YYYY-MM-DD");
+if(confirm("Bloquear dia inteiro?")){
 
 horarios.forEach(h=>{
 
 agendamentos.push({
 
-uid:Date.now()+h,
+uid:Date.now()+Math.random(),
 
 data,
 
@@ -608,25 +445,74 @@ salvar();
 
 renderAgenda();
 
+renderCalendario();
+
 }
 
-function bloquearHorario(){
+return;
 
-let data=prompt("Data YYYY-MM-DD");
+}
 
-let hora=prompt("Hora");
+dataAtual=data;
 
-let tipo=prompt("1 bloqueio normal\n2 treinamento");
+abrirHorarios(data);
+
+}
+
+/* HORARIOS */
+
+function abrirHorarios(data){
+
+document.getElementById("modalHorarios").classList.remove("hidden");
+
+document.getElementById("dataSelecionada").innerText=data;
+
+let lista=document.getElementById("listaHorarios");
+
+lista.innerHTML="";
+
+horarios.forEach(h=>{
+
+let existente=
+agendamentos.find(a=>a.data===data && a.hora===h);
+
+let btn=document.createElement("div");
+
+btn.className="horario";
+
+btn.innerText=h;
+
+if(existente){
+
+btn.classList.add(existente.status);
+
+}else{
+
+btn.onclick=()=>clicarHorario(h);
+
+}
+
+lista.appendChild(btn);
+
+});
+
+}
+
+function clicarHorario(hora){
+
+if(modo==="bloquearHorario"){
+
+let tipo=confirm("OK bloqueio normal\nCancelar treinamento");
 
 agendamentos.push({
 
 uid:Date.now(),
 
-data,
+data:dataAtual,
 
 hora,
 
-status:tipo==="2"?"treinamento":"bloqueado"
+status:tipo?"bloqueado":"treinamento"
 
 });
 
@@ -634,9 +520,133 @@ salvar();
 
 renderAgenda();
 
+abrirHorarios(dataAtual);
+
+return;
+
 }
 
-/* MES */
+if(modo==="agendar"){
+
+let nome=prompt("Nome:");
+
+let id=prompt("ID:");
+
+if(!nome||!id)return;
+
+agendamentos.push({
+
+uid:Date.now(),
+
+data:dataAtual,
+
+hora,
+
+nome,
+
+id,
+
+status:"pendente"
+
+});
+
+salvar();
+
+renderAgenda();
+
+abrirHorarios(dataAtual);
+
+}
+
+}
+
+function fecharHorarios(){
+
+document.getElementById("modalHorarios").classList.add("hidden");
+
+}
+
+/* AGENDA */
+
+function renderAgenda(){
+
+let div=document.getElementById("agenda");
+
+div.innerHTML="";
+
+agendamentos.forEach(a=>{
+
+let card=document.createElement("div");
+
+card.className="card";
+
+card.innerHTML=`
+
+<b>${a.data} ${a.hora}</b><br>
+
+${a.nome||""} ${a.id?"(ID "+a.id+")":""}<br>
+
+<span class="status ${a.status}">${a.status}</span><br>
+
+${usuarioTipo!=="professor"
+?`<button onclick="cancelar(${a.uid})">Cancelar</button>`:""}
+
+<button onclick="status(${a.uid},'realizado')">Realizado</button>
+
+<button onclick="status(${a.uid},'faltou')">Faltou</button>
+
+`;
+
+div.appendChild(card);
+
+});
+
+}
+
+/* CANCELAR */
+
+function cancelar(uid){
+
+agendamentos=
+agendamentos.filter(a=>a.uid!==uid);
+
+salvar();
+
+renderAgenda();
+
+renderCalendario();
+
+}
+
+/* STATUS */
+
+function status(uid,s){
+
+let a=agendamentos.find(x=>x.uid===uid);
+
+if(a){
+
+a.status=s;
+
+salvar();
+
+renderAgenda();
+
+}
+
+}
+
+function salvar(){
+
+localStorage.setItem("agendamentos",JSON.stringify(agendamentos));
+
+}
+
+function logout(){
+
+location.reload();
+
+}
 
 function mesAnterior(){
 
